# dcontext

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  idea.md
dcontext/: Cargo.toml
dcontext-dactor/: Cargo.toml  README.md
dcontext-dactor/src/: header.rs  inbound.rs  lib.rs  outbound.rs  propagation.rs  tests.rs
dcontext-tracing/: Cargo.toml  README.md
dcontext-tracing/src/: async_layer.rs  field_mapping.rs  guard_stack.rs  layer.rs  layer_common.rs  lib.rs  log_enrichment.rs  span_info.rs  sync_layer.rs  tests.rs  tracing_field.rs
dcontext-tracing/tests/: dual_context_tests.rs
dcontext/benches/: context_propagation.rs
dcontext/src/: async_ctx.rs  async_storage.rs  attach.rs  config.rs  context_future.rs  context_key.rs  error.rs  fork.rs  future_ext.rs  helpers.rs  inheritance.rs  lib.rs  macros.rs  registry.rs  scope.rs  snapshot.rs  storage.rs  store.rs  sync_ctx.rs  sync_storage.rs  tests.rs  value.rs  wire.rs
docs/: dcontext-design.md  design.md  review_comment.md  usage-guide.md
docs/design/: dcontext-unified-thread-local-context.md
dstate/: Cargo.toml
dstate/src/test_support/: test_runtime.rs
dstate/src/traits/: runtime.rs
samples/: Cargo.toml  README.md
