[package]
name = "dcontext-tracing"
version = "0.8.1"
edition = "2021"
description = "Bidirectional bridge between dcontext context values and tracing spans"
license = "MIT"
readme = "README.md"
repository = "https://github.com/microsoft/dcontext"
keywords = ["context", "tracing", "distributed", "propagation", "spans"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[dependencies]
dcontext = { path = "../dcontext", version = "0.8.0" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt"] }
