[package]
name = "dcontext"
version = "0.8.0"
edition = "2021"
description = "Distributed context propagation for Rust — scoped, type-safe, serializable"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/microsoft/dcontext"
keywords = ["context", "distributed", "propagation", "tracing", "scope"]
categories = ["concurrency", "network-programming"]

[dependencies]
bincode = "1"
base64 = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }

[features]
default = ["base64", "context-key"]
base64 = ["dep:base64"]
context-key = []

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "context_propagation"
harness = false
