[package]
name = "dcontext-samples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22"
dcontext = { path = "../dcontext" }
dcontext-dactor = { path = "../dcontext-dactor" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt"] }
